<resources>
    <string name="app_name">EasyJob</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_offers">History</string>
    <string name="title_profile">Profile</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to show the avaliable jobs around you.</string>
    <string name="location_permission_denied">EasyJob requires location permission to work. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'EasyJob\'.</string>
    <string name="permission_required_toast">Location permission is required for EasyJob to work.</string>


    <!-- Authentication -->
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! Welcome to EasyJob.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="log_in_text">Welcome to EasyJob! Please log in or sign up.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="new_pass_hint">Password: Please leave empty to keep your old password</string>
    <string name="new_pass_confirmation_hint"></string>
    <string name="user_info_save">Save</string>
    <string name="user_info_hint">Any field you leave empty will now be updated!</string>
    <string name="delete_button">Delete Account</string>
    <string name="account_deleted">Account Deleted</string>

    <!-- add job-->
    <string name="job_type">Job type</string>
    <string name="job_type_hint">Babysitting, moving furniture,...</string>
    <string name="pay">Pay</string>
    <string name="pay_hint">Please insert hourly pay in dollars</string>
    <string name="add_job">Create an Offer</string>
    <string name="create_offer_button_label">Create Offer</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="state_hint">NY, CA, VT,...</string>
    <string name="description">Description</string>
    <string name="easyjob">EasyJob</string>

    <!-- Checkout -->
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>

    <string name="delete_account">We are sorry to see you leave. Please make sure all jobs created have
    no worker and all worked job are done or dropped or you will be charged the job price before
    you delete.</string>

</resources>