<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="majd_hamdan.com.easyjob.authentication.LoginActivity" >


    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="text">

        <requestFocus></requestFocus>
    </EditText>

    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstNameField"
        android:layout_below="@+id/firstNameField"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/phoneNumberField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lastNameField"
        android:layout_below="@+id/lastNameField"
        android:ems="10"
        android:hint="@string/phone_number_hint"
        android:inputType="phone">
    </EditText>

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/phoneNumberField"
        android:layout_below="@+id/phoneNumberField"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress">
    </EditText>

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword">
    </EditText>

    <EditText
        android:id="@+id/passwordConfirmationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:ems="10"
        android:hint="@string/password_confirmation_hint"
        android:inputType="textPassword">
    </EditText>

    <Button
        android:id="@+id/singupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passwordConfirmationField"
        android:layout_below="@+id/passwordConfirmationField"
        android:onClick="onSignupClicked"
        android:text="@string/sign_up_button_label">
    </Button>


</RelativeLayout>