<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:icon="@drawable/baseline_work_black_24dp"
        android:id="@+id/navigation_offers"
        android:title="@string/title_jobs" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_offers" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_box_black_24dp"
        android:title="@string/title_profile" />




    <!--    <item-->
<!--        android:id="@+id/navigation_home"-->
<!--        android:icon="@drawable/ic_home_black_24dp"-->
<!--        android:title="@string/title_home" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

</menu>